--- a/Runtime/UInterface.asmdef
+++ b/Runtime/UInterface.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UWindows",
+    "name": "UInterface",
     "rootNamespace": "",
     "references": [
         "GUID:79dcdfb69b1bf4482a7f1952e749f51b"
